--- a/frontend/src/css/app.scss
+++ b/frontend/src/css/app.scss
@@ -1,9 +1,9 @@
 @import "~bootstrap/scss/bootstrap";
 
-.slide-enter-active, .slide-leave-active {
+.fade-enter-active, .fade-leave-active {
   transition: all 1s;
 }
 
-.slide-enter, .slide-leave-to {
-  transform: translateX(-100px);
+.fade-enter, .fade-leave-to {
+  opacity: 0;
 }
