--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -3,7 +3,7 @@
     {{ encore_entry_link_tags('app') }}
 {% endblock %}
 {% block body %}
-    <div class="container-fluid" id="app">
+    <div id="app">
     </div>
 {% endblock %}
 {% block javascripts %}
