--- a/frontend/src/css/app.scss
+++ b/frontend/src/css/app.scss
@@ -1,4 +1,6 @@
 @import "~bootstrap/scss/bootstrap";
+@import "~@fortawesome/fontawesome-free/scss/fontawesome";
+@import "~@fortawesome/fontawesome-free/scss/solid";
 
 .fade-enter-active, .fade-leave-active {
   transition: all 1s;
