--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -2,6 +2,9 @@
 {% block stylesheets %}
     {{ encore_entry_link_tags('app') }}
 {% endblock %}
+{% block title %}
+MC-SMP
+{% endblock %}
 {% block body %}
     <div id="app">
     </div>
